--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,3 +5,5 @@
 
 <b><%= Time.now() %></b>
 <h2>Año: <%= Time.now.year%></h2>
+
+<%=image_tag("ImagenDeApoyo.jpg",size: '400x300',  alt: "Edit Entry")%>
