--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
                 </li>
                 <li class="nav-item">
                     <!--<a class="nav-link" href="#">Link</a>-->
-                    <%= link_to 'Link','/link',class: 'nav-link' %>
+                    <%= link_to 'Libros','/libros',class: 'nav-link' %>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
