integracion con template phantom

--- a/app/views/libros/index.html.erb
+++ b/app/views/libros/index.html.erb
@@ -1,6 +1,8 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Libros</h1>
+<%= link_to "Crear nuevo libro", new_libro_path %>
+<br><hr>
 
 <div id="libros">
   <% @libros.each do |libro| %>
@@ -11,4 +13,4 @@
   <% end %>
 </div>
 
-<%= link_to "New libro", new_libro_path %>
+
